# p2p_client

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: codereview.md  development.md  git-workflow.md  man.md  plan.md  running.md  testing.md  ui.md
docker/: Dockerfile  README.md  entrypoint.sh
p2p_client/: Cargo.toml
p2p_client/src/: encryption.rs  file_rw.rs  gui.rs  listener.rs  main.rs  packet.rs  requester.rs  sender.rs
src/: file_rw.rs  gui.rs  listener.rs  main.rs  requester.rs
