[package]
name = "p2p_client"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.8"
byteorder = "1.5.0"
aes-gcm = "0.10.3"
x25519-dalek = "2.0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
directories = "6.0.0"
size = "0.5.0"
memmap2 = "0.9.5"