[package]
name = "p2p_client"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
byteorder = "1.5.0"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
hex = "0.4.3"
memmap2 = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
sha2 = "0.10.8"
size = "0.5.0"
tempfile = "3.20.0"
tokio = { version = "1", features = ["full"] }
x25519-dalek = "2.0.1"
